# Cpp_AI_lib

./: .gitignore  CMakeLists.txt  Cpp_AI.hpp  build.sh
Arrays/: CMakeLists.txt  cpp_arrays.hpp
Arrays/examples/: CMakeLists.txt  expected_result.txt  sum_product_example.cpp
Arrays/include/: array.hpp
Arrays/include/Arrays/: array.hpp  array_math.hpp  cpp_arrays.hpp  ndarrays.hpp  utils.hpp
Arrays/test/: test  test.cpp
Tensor/: build.sh  cpp_tensor.hpp
Tensor/include/: tensor.hpp  tensorMath.hpp
Tensor/source/: tensor.cpp  tensorMath.cpp
Tensor/test/: build.sh  expected_result.txt  out  test  test.cpp
Tensors/: slice.hpp  tensor.hpp  test  test.cpp
Tensors/include/: tensor.hpp
Tensors/source/: tensor.cpp  tensorMath.cpp  test.cpp
examples/: CMakeLists.txt  example_XOR.cpp  example_affine.cpp  example_dataset_XOR.cpp  example_double.cpp  example_softmax.cpp
include/: DataLoader.hpp  Dataset.hpp  evaluation.hpp  losses.hpp  utils.hpp
include/CppAI/: Cpp_AI.hpp  DataLoader.hpp  Dataset.hpp  evaluation.hpp  utils.hpp
include/CppAI/activation/: LeakyReLU.hpp  PReLU.hpp  ReLU.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/CppAI/deep_learning/: linear.hpp  module.hpp  network.hpp
include/CppAI/loss/: BCEWithLogitsLoss.hpp  BCE_Loss.hpp  CrossEntropyLoss.hpp  L1Loss.hpp  Loss.hpp  MSE_Loss.hpp
include/CppAI/optimizers/: GD.hpp
include/CppAI/preprocessing/: train_test_split.hpp
include/Tensors/: tensorMath.hpp
include/deep_learn/: linear.hpp  module.hpp  network.hpp
include/deep_learning/: ReLU.hpp  linear.hpp  module.hpp  network.hpp  softmax.hpp  tanh.hpp
include/loss/: Loss.hpp  Loss_base.hpp  MSE_Loss.hpp
include/optimizers/: GD.hpp  optimizer.hpp
include/preprocessing/: train_test_split.hpp
source/: linear.cpp  network.cpp
source/deep_learning/: linear.cpp  network.cpp
source/optimizers/: GD.cpp
src/deep_learning/: linear.cpp  network.cpp
src/optimizers/: GD.cpp
test/: build.sh  test  test.cpp
